--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="carousel-inner">
         <!-- anh 1 -->
         <div class="carousel-item active bg-img1">
-          <img src="/img/6.jpg" class="d-block w-100" alt="..." />
+          <img src="img/6.jpg" class="d-block w-100" alt="..." />
           <div class="container">
             <div class="carousel-caption text-start">
               <h1>Example headline</h1>
@@ -92,7 +92,7 @@
         </div>
         <!-- anh 2 -->
         <div class="carousel-item bg-img2">
-          <img src="/img/5.jpg" class="d-block w-100" alt="..." />
+          <img src="img/5.jpg" class="d-block w-100" alt="..." />
           <div class="container">
             <div class="carousel-caption">
               <h1>Another example headline</h1>
@@ -109,7 +109,7 @@
         </div>
         <!-- anh 3 -->
         <div class="carousel-item bg-img3">
-          <img src="/img/4.jpg" class="d-block w-100" alt="..." />
+          <img src="img/4.jpg" class="d-block w-100" alt="..." />
           <div class="container">
             <div class="carousel-caption text-end">
               <h1>One more for good measure</h1>
